# geolift-port

./: .gitattributes  .gitignore  LICENSE  README.md  REPORT.md  pyproject.toml
exploration/data/: geolift_test_panel.csv  ms_subset_panel.csv  realistic_panel.csv  realistic_panel_info.json
exploration/ground_truth/: GeoTestData_PreTest.csv  GeoTestData_Test.csv  GeoTest_str.txt  Y0_donors_full.csv  Y1_treated_full.csv  Z0_donors_pre.csv  Z1_treated_pre.csv  benchmark.json  fit_internals.json  geolift_objects.rds  ground_truth.json  power_small.csv
exploration/logs/: augsynth_log.txt  experiment_knobs.txt  export_matrices.txt  fidelity_run.txt  ground_truth_run.txt  install_log.txt  jsonlite_log.txt  pip_log.txt  profile_deep.txt  profile_split.txt  run_experiments.txt
exploration/results/: bench_scaling.json  citylift_R_bestmarkets.csv  citylift_R_powercurves.csv  citylift_python_compare.json  conformal_resids.json  fidelity.json  fit_reuse_verify.json  market_selection_bestmarkets_default.csv  market_selection_bestmarkets_fast.csv  market_selection_compare.json  market_selection_profile.json  market_selection_python_compare.json  market_selection_scaled_bestmarkets.csv  market_selection_scaled_compare.json  ms_R_inner_powercurves.csv  ms_R_inner_time.json  ms_python_validation.json  (+10 more)
geolift_py/: README.md  _compare_common.py  bench_scaling.py  compare_city_example.py  compare_market_selection.py  example_market_selection.ipynb  fidelity_test.py  market_selection.py  validate_market_selection.py
geolift_r_modified/: fast_presets.R
geolift_r_original/: README.md
(+52 files in other folders)
